syntax = "proto3";

package db;

import "user.proto";

option go_package = "github.com/umtdemr/simplebank/db";

message CreateUserRequest {
    string username = 1;
    string full_name = 2;
    string email = 3;
    string password = 4;
}


message CreateUserResponse {
    User user = 1;
}

