syntax = "proto3";

package db;

import "rpc_create_user.proto";
import "rpc_login_user.proto";

option go_package = "github.com/umtdemr/simplebank/db";

service SimpleBank {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {}
}